# esp_secure_cert_mgr

./: .gitignore  .gitlab-ci.yml  .idf_build_apps.toml  .ignore_build_warnings.txt  .pre-commit-config.yaml  CMakeLists.txt  Changelog.md  Kconfig  README.md  idf_component.yml  pytest.ini
.github/workflows/: release_pypi.yml  upload_component.yml
ci/: build_test.sh  requirements.txt
docs/: format.md  write_support.md
docs/esp_secure_cert_tools/: configure_esp_secure_cert_csv.md  configure_esp_secure_cert_parser.md  secure_verification.md  siganture_verification.md
examples/: pytest.ini
examples/esp_secure_cert_app/: CMakeLists.txt  README.md  cacert.pem  esp_secure_cert_config_examples.csv  partitions.csv  partitions_custflash_esp32.csv  sdkconfig.ci.default  sdkconfig.ci.ds  sdkconfig.ci.ecdsa_periperhal  sdkconfig.ci.legacy  sdkconfig.ci.rsa_ds  sdkconfig.ci.tlv  sdkconfig.defaults  sdkconfig.defaults.esp32  sdkconfig.esp32_prod  secure_boot_signing_key.pem  test_esp_secure_cert.py
examples/esp_secure_cert_app/main/: CMakeLists.txt  Kconfig.projbuild  app_main.c
examples/esp_secure_cert_app/qemu_test/: make-qemu-img.sh
examples/esp_secure_cert_app/test_apps/: conftest.py  test_esp_secure_cert_tlv.py
examples/esp_secure_cert_ota_example/: CMakeLists.txt  README.md  partitions.csv  partitions_passive_ota.csv  sdkconfig.ci  sdkconfig.ci.direct_ota  sdkconfig.ci.passive_ota  sdkconfig.ci.unallocated_ota  sdkconfig.defaults  sdkconfig.defaults.direct_ota  sdkconfig.defaults.passive_ota  sdkconfig.defaults.unallocated  test_esp_secure_cert_ota.py
examples/esp_secure_cert_ota_example/certs/: CMakeLists.txt  ca_cert.pem  ca_key.pem
examples/esp_secure_cert_ota_example/main/: CMakeLists.txt  Kconfig.projbuild  app_main.c  idf_component.yml  partition_utils.c  partition_utils.h
examples/esp_secure_cert_ota_example/rsa_keys/: private.pem
include/: esp_secure_cert_config.h  esp_secure_cert_crypto.h  esp_secure_cert_read.h  esp_secure_cert_signature_verify.h  esp_secure_cert_tlv_config.h  esp_secure_cert_tlv_read.h  esp_secure_cert_write.h  esp_secure_cert_write_errors.h
private_include/: esp_secure_cert_tlv_config.h  esp_secure_cert_tlv_private.h
qemu_test/: README.md
srcs/: esp_secure_cert_crypto.c  esp_secure_cert_read.c  esp_secure_cert_signature_verify.c  esp_secure_cert_tlv_private.h  esp_secure_cert_tlv_read.c  esp_secure_cert_tlv_write.c
test_apps/: .build-test-rules.yml  CMakeLists.txt  README.md  __init__.py  conftest.py  sdkconfig.ci.basics  sdkconfig.ci.crypto  sdkconfig.ci.default  sdkconfig.ci.legacy  sdkconfig.ci.sec_verification_flash_encryption  sdkconfig.ci.secure_verification  sdkconfig.ci.secure_verification_corrupt_partition  sdkconfig.ci.tlv  sdkconfig.ci.write  sdkconfig.defaults  test_esp_secure_cert.py
test_apps/main/: CMakeLists.txt  Kconfig.projbuild  app_main.c  esp_secure_cert_crypto.c  esp_secure_cert_tlv.c  idf_component.yml  secure_verification.c
test_apps/main/basics/: test_esp_secure_cert_basics.c
test_apps/main/crypto/: test_esp_secure_cert_crypto.c
test_apps/main/secure_verification/: test_secure_verification.c
test_apps/main/tlv_legacy/: test_esp_secure_cert_tlv.c
test_apps/main/write/: test_esp_secure_cert_write.c
test_apps/qemu_test/: requirements.4.4.txt  requirements.5.1.txt  requirements.5.3.txt  requirements.txt
test_apps/qemu_test/cust_flash/: partitions.csv
test_apps/qemu_test/cust_flash/input_data/: device_cert.pem  priv_key.pem
test_apps/qemu_test/cust_flash_legacy/: partitions.csv
test_apps/qemu_test/cust_flash_legacy/input_data/: ca_cert.pem
test_apps/qemu_test/cust_flash_tlv/input_data/: ca_cert.pem  devcert_1_0.pem  priv_key.pem
test_apps/qemu_test/nvs/: partitions.csv
test_apps/qemu_test/nvs/input_data/: device_cert.pem  priv_key.pem
test_apps/qemu_test/nvs_legacy/: partitions.csv
test_apps/qemu_test/nvs_legacy/input_data/: ca_cert.pem
test_apps/qemu_test/secure_verification/: secure_boot.key
test_apps/qemu_test/secure_verification/input_data/: device_cert.pem
tools/: .flake8  Changelog.md  README.md  configure_ds.py  configure_esp_secure_cert.py  requirements.txt  setup.py  tlv_parser.py
tools/esp_secure_cert/: configure_ds.py  custflash_format.py  efuse_helper.py  esp_secure_cert_helper.py  nvs_format.py  tlv_format.py  tlv_format_construct.py  tlv_parser.py
tools/test_certs/: client.crt  client.key  rootCA.key  rootCA.pem
tools/tests/: test_configure_esp_secure_cert.py  test_tlv_parser.py
tools/tests/input_data/: client.key  esp_secure_cert_config_examples.csv
tools/tests/input_data/esp_secure_cert_parsed_data_expected/: esp_secure_cert_parsed.csv  tlv_entries_raw.txt
tools/tests/input_data/esp_secure_cert_parsed_data_expected/contents/: privkey_2_0.pem
